# cmake-custom-deps

./: CMakeLists.txt  my-gen.sh  my-input.txt  nisse.c
